--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-keychain": "3.1.3",
     "react-native-linear-gradient": "2.5.4",
     "react-native-local-auth": "github:mattermost/react-native-local-auth#cc9ce2f468fbf7b431dfad3191a31aaa9227a6ab",
-    "react-native-navigation": "github:migbot/react-native-navigation#03c623c373f818827a463ca0fe90f86f56e71b2f",
+    "react-native-navigation": "2.20.2",
     "react-native-notifications": "github:mattermost/react-native-notifications#721fcb41b3c265a5eec208a1df181d4ffcafa477",
     "react-native-passcode-status": "1.1.1",
     "react-native-permissions": "1.1.1",
